# ocadl

./: .gitignore  Makefile  README.html  README.org  a.out  add.c  data.csv  deep.cmi  deep.cmx  deep.ml  deepmat.ml  deepmat.mli  dune-project  gemm.c  mini.csv  mpp.install  ocadl.install  save.json  test.cpp
gpu/: #nn.cl#  Makefile  add.c  add.cl  blac.c  blac.cpp  blac.h  blac.hpp  blasc.h  blasc.hpp  deep.c  deep.cpp  deep.h  deep.hpp  gemm.c  gpu.h  libgpu.pc  nn.cl  ocl.cpp  ocl.h  ocl.hpp  test  test.cpp  vec.c
gpu/tests/: test.cpp
lib/: #nn.ml#  alias.ml  common.ml  conv3D.ml  deep.ml  deep.mli  deepmath.ml  dune  flatten.ml  function_description.ml  matrix.ml  nn.ml  ocadl.ml  shape.ml  shape.mli  test.ml  type_description.ml  types.ml
lib/layers/: conv2D.ml  conv3D.ml  flatten.ml  flatten2D.ml  fully_connected.ml  input1D.ml  input2D.ml  input3D.ml  pooling.ml  pooling2D.ml
lib/math/: deepmath.ml  matrix.ml  shape.ml  shape.mli  tensor.ml
lib/mpp/: #mppx.ml#  .#mppx.ml  dune  mppx.ml
src/: dune  main.ml
test/: dune  ocadl.ml
