(env
  (dev
    (flags (:standard -warn-error -A))))


(library
 (public_name ocadl)
 (libraries yojson
            domainslib
            ppx_deriving
            ppxlib
            ppx_catch
            csv)
 (inline_tests)
 (preprocess (pps ppx_catch ppx_deriving.show ppx_inline_test))
 (name ocadl))
