(env
  (dev
    (flags (:standard -warn-error -A))))

(include_subdirs unqualified)
; (include_subdirs ../vector)

(library
 (public_name ocadl)
 (libraries yojson
            domainslib
            ppx_deriving
            ctypes
            ctypes-foreign
            ppx_catch
            csv)
 (inline_tests)
 (preprocess (pps ppx_catch ppx_deriving.show ppx_inline_test))
 (foreign_stubs
  (include_dirs (lib cc_mat))
  (language c) (names hello) (flags -lOpenCL))
 (name ocadl))
